--- a/SimpleWeather.UWP.Shared/Strings/en-US/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en-US/Resources.resw
@@ -550,4 +550,7 @@
   <data name="ReviewButton.Content" xml:space="preserve">
     <value>Rate and Review</value>
   </data>
+  <data name="TranslateButton.Content" xml:space="preserve">
+    <value>Help translate the app</value>
+  </data>
 </root>
