SimpleWeather: add custom units setting

--- a/SimpleWeather.UWP.Shared/Strings/en-US/Units.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en-US/Units.resw
@@ -153,4 +153,8 @@
     <value>km</value>
     <comment>Pressure: kilometers</comment>
   </data>
+  <data name="unit_msec" xml:space="preserve">
+    <value>m/s</value>
+    <comment>Meters per second</comment>
+  </data>
 </root>
