--- a/SimpleWeather.UWP.Shared/Strings/en-US/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en-US/Resources.resw
@@ -150,6 +150,7 @@
   </data>
   <data name="Label_Chance.Text" xml:space="preserve">
     <value>Chance</value>
+    <comment>Chance of Precipitation</comment>
   </data>
   <data name="Label_Condition.Text" xml:space="preserve">
     <value>Condition</value>
@@ -448,12 +449,6 @@
   <data name="NoWeatherAlerts_Prompt.Text" xml:space="preserve">
     <value>No weather alerts available.</value>
   </data>
-  <data name="Pref_UnitCelsius.Content" xml:space="preserve">
-    <value>Celsius</value>
-  </data>
-  <data name="Pref_UnitFahrenheit.Content" xml:space="preserve">
-    <value>Fahrenheit</value>
-  </data>
   <data name="LocationSearchHint.HeaderText" xml:space="preserve">
     <value>Add a location</value>
   </data>
@@ -552,5 +547,20 @@
   </data>
   <data name="TranslateButton.Content" xml:space="preserve">
     <value>Help translate the app</value>
+  </data>
+  <data name="pref_title_resetunits" xml:space="preserve">
+    <value>Reset units to default values</value>
+  </data>
+  <data name="default_units_imperial" xml:space="preserve">
+    <value>°F, mph, in, inHg, mi</value>
+  </data>
+  <data name="default_units_metric" xml:space="preserve">
+    <value>°C, km/h, mm, mb, km</value>
+  </data>
+  <data name="Label_Speed.Text" xml:space="preserve">
+    <value>Speed</value>
+  </data>
+  <data name="Label_Distance.Text" xml:space="preserve">
+    <value>Distance</value>
   </data>
 </root>
