FeatureSettings: add option to remove tile image

--- a/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
@@ -563,4 +563,7 @@
   <data name="Label_Distance.Text" xml:space="preserve">
     <value>Distance</value>
   </data>
+  <data name="FeatureOption_TileBackground.Content" xml:space="preserve">
+    <value>Tile Background Image</value>
+  </data>
 </root>
