--- a/SimpleWeather.UWP.Shared/Strings/sk/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/sk/Resources.resw
@@ -562,4 +562,7 @@
   <data name="Label_Distance.Text" xml:space="preserve">
     <value>Vzdialenosť</value>
   </data>
+  <data name="FeatureOption_TileBackground.Content" xml:space="preserve">
+    <value>Obrázok na pozadí miniatúry</value>
+  </data>
 </root>
