--- a/SimpleWeather.UWP.Shared/Strings/pl/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/pl/Resources.resw
@@ -563,4 +563,7 @@
   <data name="Label_Distance.Text" xml:space="preserve">
     <value>Dystans</value>
   </data>
+  <data name="FeatureOption_TileBackground.Content" xml:space="preserve">
+    <value>Obraz tła miniatury</value>
+  </data>
 </root>
