--- a/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
@@ -569,4 +569,7 @@
   <data name="Pref_TitleIcons.Content" xml:space="preserve">
     <value>Icons</value>
   </data>
+  <data name="FeatureOption_Charts.Content" xml:space="preserve">
+    <value>Charts</value>
+  </data>
 </root>
