--- a/SimpleWeather.UWP.Shared/Strings/sk/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/sk/Resources.resw
@@ -565,4 +565,12 @@
   <data name="FeatureOption_TileBackground.Content" xml:space="preserve">
     <value>Obrázok na pozadí miniatúry</value>
   </data>
+  <data name="Pref_TitleIcons.Content" xml:space="preserve">
+    <value>Ikony</value>
+    <comment>Fuzzy</comment>
+  </data>
+  <data name="FeatureOption_Charts.Content" xml:space="preserve">
+    <value>Grafy</value>
+    <comment>Fuzzy</comment>
+  </data>
 </root>
