--- a/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
@@ -572,4 +572,7 @@
   <data name="FeatureOption_Charts.Content" xml:space="preserve">
     <value>Charts</value>
   </data>
+  <data name="Pref_Refresh30Min.Text" xml:space="preserve">
+    <value>30 minutes</value>
+  </data>
 </root>
