--- a/SimpleWeather.UWP.Shared/Strings/fr/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/fr/Resources.resw
@@ -571,4 +571,7 @@
   <data name="FeatureOption_Charts.Content" xml:space="preserve">
     <value>Graphiques</value>
   </data>
+  <data name="Pref_Refresh30Min.Text" xml:space="preserve">
+    <value>30 minutes</value>
+  </data>
 </root>
