--- a/SimpleWeather.UWP.Shared/Strings/pl/WeatherConditions.resw
+++ b/SimpleWeather.UWP.Shared/Strings/pl/WeatherConditions.resw
@@ -170,7 +170,7 @@
     <value>Mgła</value>
   </data>
   <data name="weather_haze" xml:space="preserve">
-    <value>Mgiełka</value>
+    <value>Zmętnienie</value>
   </data>
   <data name="weather_smoky" xml:space="preserve">
     <value>Dym</value>
