--- a/SimpleWeather.UWP.Shared/Strings/sk/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/sk/Resources.resw
@@ -573,4 +573,7 @@
     <value>Grafy</value>
     <comment>Fuzzy</comment>
   </data>
+  <data name="Pref_Refresh30Min.Text" xml:space="preserve">
+    <value>30 minút</value>
+  </data>
 </root>
