Resources: merge common strings with android version

--- a/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
@@ -133,7 +133,7 @@
   <data name="Credits.Content" xml:space="preserve">
     <value>Credits</value>
   </data>
-  <data name="Error_Location" xml:space="preserve">
+  <data name="error_retrieve_location" xml:space="preserve">
     <value>Unable to get location</value>
   </data>
   <data name="General.Content" xml:space="preserve">
@@ -161,10 +161,10 @@
   <data name="Label_Done" xml:space="preserve">
     <value>Done</value>
   </data>
-  <data name="Label_Edit" xml:space="preserve">
+  <data name="action_editmode" xml:space="preserve">
     <value>Edit</value>
   </data>
-  <data name="Label_ErrLocationDenied" xml:space="preserve">
+  <data name="error_location_denied" xml:space="preserve">
     <value>Location access denied</value>
   </data>
   <data name="Label_FeelsLike.Text" xml:space="preserve">
@@ -191,7 +191,7 @@
   <data name="Label_Rain.Text" xml:space="preserve">
     <value>Rain</value>
   </data>
-  <data name="Label_Settings" xml:space="preserve">
+  <data name="action_settings" xml:space="preserve">
     <value>Settings</value>
   </data>
   <data name="Label_Snow.Text" xml:space="preserve">
@@ -242,28 +242,28 @@
   <data name="Pref_TitleProviders.Text" xml:space="preserve">
     <value>Weather Providers</value>
   </data>
-  <data name="WError_InvalidKey" xml:space="preserve">
+  <data name="werror_invalidkey" xml:space="preserve">
     <value>Invalid Provider Key</value>
   </data>
-  <data name="WError_NetworkError" xml:space="preserve">
+  <data name="werror_networkerror" xml:space="preserve">
     <value>Network Connection Error</value>
   </data>
-  <data name="WError_NoWeather" xml:space="preserve">
+  <data name="werror_noweather" xml:space="preserve">
     <value>Unable to load weather data</value>
   </data>
-  <data name="WError_QueryNotFound" xml:space="preserve">
+  <data name="werror_querynotfound" xml:space="preserve">
     <value>No cities match your search query</value>
   </data>
-  <data name="Error_NoResults" xml:space="preserve">
+  <data name="error_noresults" xml:space="preserve">
     <value>No results found</value>
   </data>
   <data name="KeyEntry.Text" xml:space="preserve">
     <value>Provider Key</value>
   </data>
-  <data name="Msg_EnterAPIKey" xml:space="preserve">
+  <data name="message_enter_apikey" xml:space="preserve">
     <value>Please enter a Provider Key</value>
   </data>
-  <data name="Action_Retry" xml:space="preserve">
+  <data name="action_retry" xml:space="preserve">
     <value>Retry</value>
   </data>
   <data name="Pref_GeneralHeader.Text" xml:space="preserve">
@@ -290,10 +290,10 @@
   <data name="Pref_Refresh6Hrs.Text" xml:space="preserve">
     <value>6 hours</value>
   </data>
-  <data name="Update_Prefix" xml:space="preserve">
+  <data name="update_prefix" xml:space="preserve">
     <value>Updated on</value>
   </data>
-  <data name="Update_PrefixDay" xml:space="preserve">
+  <data name="update_prefix_day" xml:space="preserve">
     <value>Updated at</value>
   </data>
   <data name="Credit_Prefix.Text" xml:space="preserve">
@@ -320,26 +320,14 @@
   <data name="DateTime_SecAgo" xml:space="preserve">
     <value>{0}s ago</value>
   </data>
-  <data name="DateTime_ValidUntil" xml:space="preserve">
+  <data name="datetime_validuntil" xml:space="preserve">
     <value>Valid until</value>
   </data>
   <data name="Button_Refresh.Label" xml:space="preserve">
     <value>Refresh</value>
   </data>
-  <data name="Cloudiness_Label" xml:space="preserve">
-    <value>Cloudiness</value>
-  </data>
-  <data name="FeelsLike_Label" xml:space="preserve">
-    <value>Feels like</value>
-  </data>
-  <data name="Precipitation_Label" xml:space="preserve">
-    <value>Precipitation</value>
-  </data>
-  <data name="Temp_Label" xml:space="preserve">
+  <data name="label_temp" xml:space="preserve">
     <value>Temp</value>
-  </data>
-  <data name="Wind_Label" xml:space="preserve">
-    <value>Wind</value>
   </data>
   <data name="Label_Pin.Text" xml:space="preserve">
     <value>Pin to Start</value>
@@ -350,7 +338,7 @@
   <data name="RegisterKeyBox.Content" xml:space="preserve">
     <value>Create an account to register for a provider key</value>
   </data>
-  <data name="WError_Unknown" xml:space="preserve">
+  <data name="werror_unknown" xml:space="preserve">
     <value>Unknown error occurred</value>
   </data>
   <data name="ConfirmDialog.PrimaryButtonText" xml:space="preserve">
@@ -359,31 +347,31 @@
   <data name="ConfirmDialog.SecondaryButtonText" xml:space="preserve">
     <value>Cancel</value>
   </data>
-  <data name="Label_High" xml:space="preserve">
+  <data name="label_high" xml:space="preserve">
     <value>High</value>
   </data>
-  <data name="Label_Low" xml:space="preserve">
+  <data name="label_low" xml:space="preserve">
     <value>Low</value>
   </data>
   <data name="Pref_PersonalKey.Text" xml:space="preserve">
     <value>Use personal provider key:</value>
   </data>
-  <data name="Beaufort_Label" xml:space="preserve">
+  <data name="label_beaufort" xml:space="preserve">
     <value>Beaufort</value>
   </data>
-  <data name="Dewpoint_Label" xml:space="preserve">
+  <data name="label_dewpoint" xml:space="preserve">
     <value>Dew Point</value>
   </data>
-  <data name="Moonrise_Label" xml:space="preserve">
+  <data name="label_moonrise" xml:space="preserve">
     <value>Moonrise</value>
   </data>
-  <data name="Moonset_Label" xml:space="preserve">
+  <data name="label_moonset" xml:space="preserve">
     <value>Moonset</value>
   </data>
-  <data name="UV_Label" xml:space="preserve">
+  <data name="label_uv" xml:space="preserve">
     <value>UV Index</value>
   </data>
-  <data name="Label_Delete" xml:space="preserve">
+  <data name="delete" xml:space="preserve">
     <value>Delete</value>
   </data>
   <data name="Label_Temperature.Text" xml:space="preserve">
@@ -404,40 +392,40 @@
   <data name="Setup_PreferencesPrompt.Text" xml:space="preserve">
     <value>Customize your settings below</value>
   </data>
-  <data name="Action_Undo" xml:space="preserve">
+  <data name="undo" xml:space="preserve">
     <value>Undo</value>
   </data>
-  <data name="Message_LocationRemoved" xml:space="preserve">
+  <data name="message_locationremoved" xml:space="preserve">
     <value>Location removed</value>
   </data>
-  <data name="Message_NeedFavorite" xml:space="preserve">
+  <data name="message_needfavorite" xml:space="preserve">
     <value>Must have at least one favorite location</value>
   </data>
-  <data name="Error_WeatherRegionUnsupported" xml:space="preserve">
+  <data name="error_message_weather_region_unsupported" xml:space="preserve">
     <value>Country not supported by this weather provider</value>
   </data>
-  <data name="Header_FavLocations" xml:space="preserve">
+  <data name="label_favoritelocations" xml:space="preserve">
     <value>Favorite Locations</value>
   </data>
-  <data name="Header_GPSLocation" xml:space="preserve">
+  <data name="label_currentlocation" xml:space="preserve">
     <value>Current Location</value>
   </data>
-  <data name="AQI_Label" xml:space="preserve">
+  <data name="label_airquality" xml:space="preserve">
     <value>Air Quality Index</value>
   </data>
   <data name="Label_Radar.Header" xml:space="preserve">
     <value>Radar</value>
   </data>
-  <data name="Label_Day" xml:space="preserve">
+  <data name="label_afternoon" xml:space="preserve">
     <value>Afternoon</value>
   </data>
-  <data name="Label_Eve" xml:space="preserve">
+  <data name="label_eve" xml:space="preserve">
     <value>Evening</value>
   </data>
-  <data name="Label_Morning" xml:space="preserve">
+  <data name="label_morning" xml:space="preserve">
     <value>Morning</value>
   </data>
-  <data name="Label_Night" xml:space="preserve">
+  <data name="label_night" xml:space="preserve">
     <value>Night</value>
   </data>
   <data name="Nav_WeatherAlerts.Content" xml:space="preserve">
@@ -497,13 +485,13 @@
   <data name="Pref_Features_Title.Text" xml:space="preserve">
     <value>Features</value>
   </data>
-  <data name="MoonPhase_Label" xml:space="preserve">
+  <data name="label_moonphase" xml:space="preserve">
     <value>Moon Phase</value>
   </data>
-  <data name="WindGust_Label" xml:space="preserve">
+  <data name="label_windgust" xml:space="preserve">
     <value>Wind Gust</value>
   </data>
-  <data name="Label_Series" xml:space="preserve">
+  <data name="label_series" xml:space="preserve">
     <value>Series</value>
   </data>
   <data name="Attrib_Prefix.Text" xml:space="preserve">
@@ -530,7 +518,7 @@
   <data name="NoUpdateAvailablePrompt" xml:space="preserve">
     <value>No updates available</value>
   </data>
-  <data name="UpdateAvailablePrompt" xml:space="preserve">
+  <data name="prompt_update_available" xml:space="preserve">
     <value>Update available. Click to install</value>
   </data>
   <data name="DownloadingPrompt" xml:space="preserve">
@@ -580,5 +568,8 @@
   </data>
   <data name="Pref_Title_Time.Header" xml:space="preserve">
     <value>Time:</value>
+  </data>
+  <data name="label_day" xml:space="preserve">
+    <value>Day</value>
   </data>
 </root>
